--- a/tools/clipboard/style.css
+++ b/tools/clipboard/style.css
@@ -1,81 +1,19 @@
-:root {
-    --font: system-ui, sans-serif, ui-sans-serif;
-}
-
-body {
-    background: transparent !important;
-}
-
-#wrapper {
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    inset: 0;
-    border-radius: var(--border-radius-medium);
-    border: 1px solid var(--elevate-2);
-    overflow: hidden;
-}
-
-#handle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 24px;
-    -webkit-app-region: drag;
-}
-
-#handle div {
-    background: var(--elevate-2);
-    width: 24px;
-    height: 4px;
-    border-radius: 2px;
-}
-
-#clipboardHistory {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    padding-top: 0;
-    overflow: auto;
-    height: 100%;
-    gap: 8px;
-}
-
-#main {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-}
-
-#content {
-    flex: 1;
-    height: 100%;
-    overflow: hidden;
-}
-
-#content ls-tab {
-    height: 100%;
-}
-
-#main-background {
-    width: 100%;
-    height: 100%;
-    background: var(--background);
-}
-
-#wrapper.acrylic #main-background {
-    backdrop-filter: blur(100px);
-    background: color-mix(in oklab, var(--background) 100%, transparent 50%);
-    /* background: transparent; */
-}
-
 .clipboard-item {
     cursor: pointer;
     user-select: none;
     overflow: hidden;
     text-overflow: ellipsis;
+    border: 2px solid transparent;
+}
+
+.clipboard-item:hover {
+    border-color: var(--elevate-3);
+    outline: none;
+}
+
+.clipboard-item:focus {
+    border-color: var(--elevate-4);
+    outline: none;
 }
 
 .clipboard-item-image-container {
@@ -99,9 +37,12 @@ body {
     word-break: break-all;
 }
 
-.buttons {
+#clipboardHistory {
     display: flex;
+    flex-direction: column;
+    padding: 10px;
+    padding-top: 0;
+    overflow: auto;
+    height: 100%;
     gap: 8px;
-    padding: 0 8px;
-    justify-content: center;
 }
