--- a/tools/clipboard/style.css
+++ b/tools/clipboard/style.css
@@ -29,6 +29,7 @@
     max-height: 120px;
     display: -webkit-box;
     -webkit-line-clamp: 4;
+    line-clamp: 4;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
